4_sg_firewall.tf

# 4. Указываем группу безопасности
resource "aws_security_group" "sli_ssh" {
  name        = "ssh security group"
  description = "sli SSH SG"

#  4.1 Входящий трафик
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 1194
    to_port     = 1194
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

# 4.2 Исходящий трафик
    egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = { Name = "allow_SSH_OpenVPN" }
}
